Fix layout issue
The footer is showing at the middle of the cart page now it shows
correctly at the bottom

--- a/src/pages/ShoppingCart/ShoppingCart.module.css
+++ b/src/pages/ShoppingCart/ShoppingCart.module.css
@@ -5,4 +5,5 @@
   justify-content: center;
   gap: 64px;
   font-size: 1.6rem;
+  flex-grow: 1;
 }
